welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: value * is not a member of Unit
    avance*nbPas
          ^